After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676088 - Fixing picking in scroll-actor "breaks" gnome-control-center
Fixing picking in scroll-actor "breaks" gnome-control-center
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: ClutterActor
git master
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-05-15 11:14 UTC by Debarshi Ray
Modified: 2012-05-15 14:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
scroll-actor: Paint children in pick mode (1.24 KB, patch)
2012-05-15 14:08 UTC, Emmanuele Bassi (:ebassi)
none Details | Review
scroll-actor: Paint children in pick mode (1.33 KB, patch)
2012-05-15 14:15 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Debarshi Ray 2012-05-15 11:14:24 UTC
This commit "breaks" the new gnome-control-center from Git master.

It is not possible to click anything in the icon view. Typing in the toolbar search field and hitting enter takes you to the panel, but then you can't click anything within the panel either.

commit 39a4929d75bb882551cd51632befd02c0c2fcf4b
Author: Emmanuele Bassi <ebassi@linux.intel.com>
Date:   Mon May 14 10:33:13 2012 +0100

    scroll-actor: Implement pick()
    
    We need to clip the children during picking as well as we do when
    painting, to avoid reactive children outside of the visible area
    receiving events.
    
    This also allows us to refactor some common code into proper functions.


This is the most recent gnome-control-center commit that I have:

commit 62d2bcf0b8e9187b77c7b79becb1b40f9793fd1e
Author: Bastien Nocera <hadess@hadess.net>
Date:   Thu May 10 18:21:39 2012 +0100

    shell: Fix xrefs not working
    
    We were scrolling to parts of the stage where we wouldn't have
    a page anymore. Don't do that, and only remove pages when we're
    done with animations.
Comment 1 Emmanuele Bassi (:ebassi) 2012-05-15 11:17:51 UTC
the commit fixes picking of children in ClutterScrollActor: without it, reactive children of a ClutterScrollActor will still be painted even if they fall outside of the visible region. the only way to fix this is to override pick() and apply the same clipping as the paint() implementation.
Comment 2 Emmanuele Bassi (:ebassi) 2012-05-15 11:18:39 UTC
re-assigning to gnome-control-center.
Comment 3 Emmanuele Bassi (:ebassi) 2012-05-15 14:06:11 UTC
nevermind, I'm an idiot.
Comment 4 Emmanuele Bassi (:ebassi) 2012-05-15 14:08:29 UTC
Created attachment 214095 [details] [review]
scroll-actor: Paint children in pick mode

Chaining up to the parent's implementation of pick() is not enough: we
need to paint our children explicitly because of the compatibility mode
checks we use to avoid breaking custom containers.
Comment 5 Emmanuele Bassi (:ebassi) 2012-05-15 14:15:40 UTC
Created attachment 214096 [details] [review]
scroll-actor: Paint children in pick mode

Chaining up to the parent's implementation of pick() is not enough: we
need to paint our children explicitly because of the compatibility mode
checks we use to avoid breaking custom containers.
Comment 6 Emmanuele Bassi (:ebassi) 2012-05-15 14:16:23 UTC
Attachment 214096 [details] pushed as c54c304 - scroll-actor: Paint children in pick mode